Fix spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html {
-  font-family: " Georgia, serif ";
+  font-family: Georgia, serif;
   color: #fff;
 }
 
